parser/src/parser/snapshots/tests__parser::function::tests::parse_function.snap
---
created: "2020-05-06T10:43:13.014612200Z"
creator: insta@0.8.2
source: parser/src/parser/function.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 12)
  FN_DEF@[0; 12)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 12)
      BLOCK@[10; 12)
        L_CURLY@[10; 11) "{"
        R_CURLY@[11; 12) "}"

