parser/src/parser/snapshots/tests__parser::imports::tests::parse_import_with_brace.snap
---
created: "2020-05-06T10:43:13.025574600Z"
creator: insta@0.8.2
source: parser/src/parser/imports.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 22)
  IMPORT_DEF@[0; 22)
    IMPORT_KW@[0; 6) "import"
    WHITESPACE@[6; 7) " "
    IMPORT_SEGMENT@[7; 10)
      NAME@[7; 10)
        IDENT@[7; 10) "foo"
    COLON_COLON@[10; 12) "::"
    IMPORT_LIST@[12; 21)
      L_CURLY@[12; 13) "{"
      IMPORT_SEGMENT@[13; 16)
        NAME@[13; 16)
          IDENT@[13; 16) "bar"
      COMMA@[16; 17) ","
      IMPORT_SEGMENT@[17; 20)
        NAME@[17; 20)
          IDENT@[17; 20) "baz"
      R_CURLY@[20; 21) "}"
    SEMI@[21; 22) ";"

